# blog-management-system

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/prompts/: documentation_of_steps.md  execute_documentation_plan.md
.cursor/rules/: conventional-commits.mdc  langchain-standards.mdc
blog_management_system/: __init__.py
docs/: README.md
docs/ai/: implementation_guide.md
docs/ai/agents/: README.md
docs/architecture/: README.md
docs/architecture/diagrams/: README.md
docs/architecture/infrastructure/: README.md
docs/architecture/patterns/: README.md
docs/backend/: README.md
docs/backend/api/: README.md
docs/backend/api/endpoints/: README.md
docs/backend/database/: README.md
docs/cli/: README.md
docs/development-workflow/: README.md
docs/development-workflow/contribution/: README.md
docs/development-workflow/deployment/: README.md
docs/development-workflow/monitoring/: README.md
docs/development-workflow/observability/: README.md
docs/development-workflow/testing/: README.md
docs/frontend/: README.md
docs/frontend/components/: README.md
docs/frontend/layouts/: README.md
docs/frontend/routes/: README.md
docs/frontend/routing/: README.md
docs/frontend/state-management/: README.md
docs/frontend/styling/: README.md
docs/getting-started/: README.md
docs/getting-started/environment-setup/: README.md
docs/project-plan/: README.md
docs/project-structure/: README.md
docs/tech-stack/: README.md
frontend/: package-lock.json  package.json
(+6 files in other folders)
